--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,8 @@ on:
 
 jobs:
 
-  build:
+  build_test_amd64:
+    name: Build on ubuntu-latest amd64
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -23,3 +24,27 @@ jobs:
 
     - name: Test
       run: go test -v .
+
+  build_test_arm64:
+    runs-on: ubuntu-latest
+    name: Build on ubuntu-latest arm64
+    steps:
+      - uses: actions/checkout@v3
+      - uses: uraimo/run-on-arch-action@v2
+        name: Run commands
+        id: runcmd
+        with:
+          arch: aarch64
+          distro: ubuntu22.04
+
+          # speeds up builds by storing container images in a GitHub package registry.
+          githubToken: ${{ github.token }}
+
+          install: |
+            apt-get -y update;
+            apt-get install -q -y git golang-go;
+            which go;
+
+          run: |
+            go version;
+            go test -v .;
